# swing_trader

./: .env.example  .gitignore  CLAUDE.md  MASTER_PLAN_DELTAS.md  README.md  conftest.py  master_plan_v4.md  pyproject.toml  terminal_execution_blueprint.md
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-28-regime-validation-notebook.md  2026-04-29-baa-gs10-composite-spread.md
docs/superpowers/specs/: 2026-04-28-regime-validation-notebook-design.md
notebooks/: 01_regime_validation.ipynb  01_regime_validation_executed.ipynb
src/common/: logging.py
src/config/: settings.py
src/regime/: fred_client.py  monitor.py
tests/common/: test_logging.py
tests/config/: test_settings.py
tests/regime/: test_fred_client.py  test_monitor.py
